changed get avatar implementation
