# src/app/lagunalink_be/controllers/avatar/AvatarGetController.ts
@@ -1,10 +1,20 @@
 import { Request, Response } from 'express';
 import { Controller } from '../Controller';
-import path from 'path';
+import { AvatarFinder } from '../../../../Contexts/LLBE/Users/application/AvatarFinder';
+import { UserId } from '../../../../Contexts/LLBE/Shared/domain/Users/UserId';
 
 export class AvatarGetController implements Controller {
+  private finder: AvatarFinder;
+  constructor(finder: AvatarFinder) {
+    this.finder = finder;
+  }
+
   async run(req: Request, res: Response) {
-    const avatar = path.join('/uploads', req.params.id);
-    res.download(avatar, () => res.status(404).send());
+    try {
+      const avatar = await this.finder.run(new UserId(req.params.id));
+      res.status(200).send({ avatarId: avatar.value });
+    } catch (e) {
+      res.status(404).send(e.message);
+    }
   }
 }
